--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	 <link rel="ICON" href="https://telegra.ph/file/3b193faa406b43f9bd113.png">
+	 <link rel="ICON" href="https://telegra.ph/file/134519dea0af9e15c5562.png">
 </head>
 <body>
 
-<div class="main">
-
-    <div class="top_section">
-  		<h5>CoderZone&nbsp;&nbsp;<i class="fa fa-headphones" aria-hidden="true"></i></h5>
-  	</div>
+<script type="text/javascript">
+<!-- HTML encoded -->
+<!--
+document.write(unescape('%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6D%61%69%6E%22%3E%0A%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%74%6F%70%5F%73%65%63%74%69%6F%6E%22%3E%0A%20%20%09%09%3C%68%35%3E%43%6F%64%65%72%5A%6F%6E%65%26%6E%62%73%70%3B%26%6E%62%73%70%3B%3C%69%20%63%6C%61%73%73%3D%22%66%61%20%66%61%2D%68%65%61%64%70%68%6F%6E%65%73%22%20%61%72%69%61%2D%68%69%64%64%65%6E%3D%22%74%72%75%65%22%3E%3C%2F%69%3E%3C%2F%68%35%3E%0A%20%20%09%3C%2F%64%69%76%3E'));
+//-->
+</script>
 
 
   <div class="tracks">
@@ -110,7 +111,6 @@ body{
     box-shadow: 0.1px 4px 8px 4px rgba(0,0,0,0.5);
 }
 
-/*اعلئ المشغل*/
 .top_section{
   margin: 1em 0;
 }
@@ -469,7 +469,7 @@ let All_song = [
     "singer": "إذاعة القرآن الكريم بالقاهرة"
   },
   {
-    "name": "إذاعة القرآن الكريم من المملكة العربية السعودية",
+    "name": "إذاعة القرآن الكريم من السعودية",
     "src": "https://stream.radiojar.com/0tpy1h0kxtzuv",
     "img": "https://telegra.ph/file/9e3bb2c82efc898d931a6.jpg",
     "singer": "إذاعة القرآن الكريم السعودية"
