--- a/index.html
+++ b/index.html
@@ -513,8 +513,14 @@ let All_song = [
   {
     "name": "بث مباشر للقرأن الكريم",
     "src": "https://backup.qurango.net/radio/ahmad_alajmy",
-    "img": "https://telegra.ph/file/5df22d726439a0d848451.jpg",
+    "img": "https://telegra.ph/file/3ca8584ea4f3335c064d0.jpg",
     "singer": "الشيخ احمد بن علي العجمي"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/maher",
+    "img": "https://telegra.ph/file/7ed9d17a30565055c86f7.jpg",
+    "singer": "الشيخ ماهر المعيقلي"
   },
   {
     "name": "المُختصر في تفسير القرآن الكريم",
