--- a/index.html
+++ b/index.html
@@ -523,6 +523,18 @@ let All_song = [
     "singer": "الشيخ ماهر المعيقلي"
   },
   {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/abdulbasit_abdulsamad",
+    "img": "https://telegra.ph/file/03eb365d5f66e02fc3381.jpg",
+    "singer": "الشيخ عبد الباسط عبد الصمد - مُرتل"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/abdulbasit_abdulsamad_mojawwad",
+    "img": "https://telegra.ph/file/d06610e59b6d161955563.jpg",
+    "singer": "الشيخ عبد الباسط عبد الصمد - مُجود"
+  },
+  {
     "name": "المُختصر في تفسير القرآن الكريم",
     "src": "https://backup.qurango.net/radio/mukhtasartafsir",
     "img": "https://telegra.ph/file/d2ccc0496d432cee8c5d8.jpg",
