--- a/index.html
+++ b/index.html
@@ -532,7 +532,19 @@ let All_song = [
     "name": "بث مباشر للقرأن الكريم",
     "src": "https://backup.qurango.net/radio/abdulbasit_abdulsamad_mojawwad",
     "img": "https://telegra.ph/file/d06610e59b6d161955563.jpg",
-    "singer": "الشيخ عبد الباسط عبد الصمد - مُجود"
+    "singer": "الشيخ عبد الباسط عبد الصمد - مُجوٌد"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/mohammed_siddiq_alminshawi",
+    "img": "https://telegra.ph/file/e7efe2c6f0a0e54c8efed.jpg",
+    "singer": "الشيخ محمد صديق المنشاوي - مُرتل"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/mohammed_siddiq_alminshawi_mojawwad",
+    "img": "https://telegra.ph/file/59d19f07d098d4dfbcbdc.jpg",
+    "singer": "الشيخ محمد صديق المنشاوي - مُجوٌد"
   },
   {
     "name": "المُختصر في تفسير القرآن الكريم",
