--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ body{
     align-items: center;
     flex-direction: column;
     border-radius: 0px;
-    background: linear-gradient(to bottom right,#673BB7,#A93CB1);
+    background: linear-gradient(to bottom right,#2D3E4F,#1CBB9B);
     box-shadow: 0.1px 4px 8px 4px rgba(0,0,0,0.5);
 }
 
@@ -269,7 +269,7 @@ input[type=range]::-webkit-slider-thumb{
   border-radius: 50%;
   cursor: pointer;
   z-index: 10;
-  background: #673BB7;
+  background: #2D3E4F;
   box-shadow: 0.1px 8px 8px 2px rgba(0,0,0,0.2) inset,
 	            0.1px 8px 8px 2px rgba(0,0,0,0.2);
 }
@@ -281,7 +281,7 @@ input[type=range]::-webkit-slider-thumb{
   left: 0;
   width: 100%;
   height: 100%;
-  background: #673BB7;
+  background: linear-gradient(to bottom right,#2D3E4F,#1CBB9B);
   padding: 5px;
   z-index: 1000;
   display: flex;
@@ -356,7 +356,7 @@ box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2),
   display: flex;
   align-items: center;
   border-radius: 20px 20px 0 0;
-  background: #673BB7;
+  background: #295A5F;
   transition: 0.4s;
   transform: translateY(80px);
 }
@@ -524,6 +524,42 @@ let All_song = [
   },
   {
     "name": "بث مباشر للقرأن الكريم",
+    "src": "https://qurango.net/radio/mohammed_jibreel",
+    "img": "https://telegra.ph/file/fe5da39867e575a97cb33.jpg",
+    "singer": "الشيخ محمد جبريل"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://qurango.net/radio/abdulrahman_alsudaes",
+    "img": "https://telegra.ph/file/68c67ab6c53aa4448104e.jpg",
+    "singer": "الشيخ عبد الرحمن السديس"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/mohammad_saleh_alim_shah",
+    "img": "https://telegra.ph/file/c9cd1f37d0ebf0daf2103.jpg",
+    "singer": "الشيخ محمد صالح عالم شاه"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/fares_abbad",
+    "img": "https://telegra.ph/file/923d37fcdb53f8b87c180.jpg",
+    "singer": "الشيخ فارس عباد"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/ali_alhuthaifi",
+    "img": "https://telegra.ph/file/c0b136055d015477718c8.jpg",
+    "singer": "الشيخ علي الحذيفي"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
+    "src": "https://backup.qurango.net/radio/mohammed_allohaidan",
+    "img": "https://telegra.ph/file/5765b68b817d9880a7a26.jpg",
+    "singer": "الشيخ محمد اللحيدان"
+  },
+  {
+    "name": "بث مباشر للقرأن الكريم",
     "src": "https://backup.qurango.net/radio/abdulbasit_abdulsamad",
     "img": "https://telegra.ph/file/03eb365d5f66e02fc3381.jpg",
     "singer": "الشيخ عبد الباسط عبد الصمد - مُرتل"
@@ -551,7 +587,7 @@ let All_song = [
     "src": "https://backup.qurango.net/radio/mukhtasartafsir",
     "img": "https://telegra.ph/file/d2ccc0496d432cee8c5d8.jpg",
     "singer": "تفسير القرآن الكريم"
-  }  
+  }
 ];
 
 let tracks = document.querySelector('.tracks');
